# demonia

./: .gitignore  CMakeLists.txt  README.md
src/: GLHandler.cxx  GLHandler.hxx  config.hxx.in  demonia.cc  gl_exception.cc  gl_exception.h  gl_exception.hh  gl_handler.cc  gl_handler.h  gl_handler.hh  main.cc  main.cxx  shader.cc  shader.h  shader.hh  tuple.hh  vertex.h  vertices.cc  vertices.hh
src/shaders/: color.frag  color.vert  fragment.glsl  vertex.glsl
